fix: form section title width on mobile

--- a/src/global/components/pageBlocks/form-section/form-section.scss
+++ b/src/global/components/pageBlocks/form-section/form-section.scss
@@ -95,6 +95,8 @@
 
     &__title {
       font-size: 2.4rem;
+      max-width: 330px;
+      margin: 0 auto 20px;
     }
 
     &__subtitle {
